feat: metadata filter to include version counts for service
